# Transgrade-CorrectionAPI

./: Dockerfile  README.md  corrected_ocr.json  pyproject.toml  report.md  requirements.txt
src/correction/: crew.py  main.py
src/correction/config/: agents.yaml  tasks.yaml
