[project]
name = "correction"
version = "0.1.0"
description = "correction using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0"
]

[project.scripts]
correction = "correction.main:run"
run_crew = "correction.main:run"
train = "correction.main:train"
replay = "correction.main:replay"
test = "correction.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
